@@ -109,7 +109,7 @@ class StopPrint(TryUntilState):
             self.file_printer.stop_print()
 
         # There might be an edge case with FINISHED, so let's wait for READY
-        self._try_until_state(gcode="M603", desired_state=State.READY)
+        self._try_until_state(gcode="M603", desired_state=State.STOPPED)
 
 
 class PausePrint(TryUntilState):
