@@ -24,6 +24,7 @@
     * Password in plain text form is not stored in memory
     * Added endpoint for gettting info about the file currently being downloaded
     * Added endpoint for abort current download process
+    * Require user attention after each print, even failed ones (if enabled)
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
